# scripts

./: .gitignore  LICENSE.md  README.md  codium-postinstall.sh  codium-setup.sh
AI-CLI-setup/: README.md  install-ai-cli.sh  install-claude-cli-sh
chromium-setup/: README.md  mcp-chromium-setup.sh
codium-setup/: README.md
continue-mcp/: README.md  chromium-mcp.sh  run.sh
multi-model-mcp/: LICENSE.md  PUBLISHING.md  README.md  REQUIREMENTS.md  USAGE.md  build.sh  install-prerequisites.sh  publish.sh  setup-continue.sh  test-chatgpt-connection.sh
multi-model-mcp/mcp-server/: Cargo.toml
multi-model-mcp/mcp-server/src/: main.rs
multi-model-mcp/mcp-server/src/auth/: anthropic.rs  mod.rs  openai.rs
multi-model-mcp/mcp-server/src/providers/: anthropic.rs  mod.rs  openai.rs
multi-model-mcp/mcp-server/src/tools/: code_generation.rs  code_review.rs  context.rs  local_map.rs  mod.rs  model_switching.rs
multi-model-mcp/vscode-extension/: .npmrc  .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json
multi-model-mcp/vscode-extension/media/: misfitChat.css  misfitDashboard.css
multi-model-mcp/vscode-extension/src/: extension.ts  mcpClient.ts  versionsTracker.ts
multi-model-mcp/vscode-extension/src/chat/: MisfitChatView.ts  view.ts
multi-model-mcp/vscode-extension/src/dashboard/: MisfitDashboardView.ts  view.ts
